2009-03-23  Mike Krüger  <mkrueger@novell.com>

	* Gui/NewCSharpExpressionFinder.cs: Fixed "Bug 487236 - Object
	  initializer completion uses wrong type".

2009-03-23  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: Fixed "Bug 487246 - No
	  intellisense for extension methods".

2009-03-23  Mike Krüger  <mkrueger@novell.com>

	* Gui/ResolveVisitor.cs: Fixed possible null ref.

2009-03-22  Mike Krüger  <mkrueger@novell.com>

	* Gui/NewCSharpExpressionFinder.cs: Added support for
	  contextual templates.

2009-03-22  Mike Krüger  <mkrueger@novell.com>

	* Parser/CSharpFormatter.cs: Fixed Header.

2009-03-21  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs:
	* Gui/MemberCompletionData.cs: Worked on template callbacks.

2009-03-21  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs:
	* Gui/NewCSharpExpressionFinder.cs:
	* Gui/NewOverrideCompletionData.cs:
	* Gui/EventCreationCompletionData.cs:
	* Gui/NRefactoryParameterDataProvider.cs: Fixed compilation
	  error.

2009-03-20  Michael Hutchinson  <mhutchinson@novell.com>

	* templates/GtkSharp2Project.xpt.xml: Don't require specific
	  GTK# versions.

2009-03-19  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs:
	* Gui/CSharpTextEditorCompletion.cs: Track API changes.

	* Gui/CSharpTextEditorIndentation.cs: changed naming.

2009-03-17  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/CSharpTextEditorIndentation.cs: Fix build.

2009-03-17  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorIndentation.cs: Fixed caret end pos.

2009-03-17  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorIndentation.cs:
	* FormattingStrategy/CSharpIndentEngine.cs: Added auto string
	  concat when return is hit inside a string.

2009-03-17  Mike Krüger  <mkrueger@novell.com>

	* Parser/NRefactoryParser.cs: Renamed method.

2009-03-17  Mike Krüger  <mkrueger@novell.com>

	* Parser/NRefactoryParser.cs: fixed 'Bug 485783 - Class/method