@@ -1,5 +1,10 @@
 2009-03-23  Mike Krüger  <mkrueger@novell.com>
 
+	* Gui/ResolveVisitor.cs: fixed "Bug 487228 - No intellisense
+	  for implicit arrays".
+
+2009-03-23  Mike Krüger  <mkrueger@novell.com>
+
 	* Gui/NewCSharpExpressionFinder.cs: Fixed "Bug 487236 - Object
 	  initializer completion uses wrong type".
 
